--- a/src/features/user_profile/components/SettingsForm/SettingsForm.module.css
+++ b/src/features/user_profile/components/SettingsForm/SettingsForm.module.css
@@ -15,6 +15,10 @@
   margin: auto 0;
 }
 
+.bioTooltipContent {
+  white-space: pre-wrap;
+}
+
 .profileWrap,
 .settingsWrap {
   display: flex;
@@ -82,9 +86,6 @@
   & textarea {
     resize: vertical;
   }
-}
-.textAreaPlaceholder {
-  white-space: pre-wrap;
 }
 
 /* Mobile view */
