feat(18228): prevent content jumping on toggle switch

--- a/src/features/subscriptions/components/PaymentPlanCard/PaymentPlanCard.module.css
+++ b/src/features/subscriptions/components/PaymentPlanCard/PaymentPlanCard.module.css
@@ -51,6 +51,10 @@
   margin-bottom: var(--double-unit);
 }
 
+.hidden {
+  visibility: hidden;
+}
+
 .perMonth {
   font-size: 14px;
   color: #888;
