--- a/src/features/subscriptions/components/PaymentPlanCard/PaymentPlanCard.module.css
+++ b/src/features/subscriptions/components/PaymentPlanCard/PaymentPlanCard.module.css
@@ -19,6 +19,10 @@
     background-color: var(--accent-weak);
     border-color: var(--strong-color);
   }
+
+  &:hover {
+    box-shadow: var(--shadow-medium);
+  }
 }
 
 .planIcon {
@@ -45,6 +49,10 @@
 
 .price {
   margin-bottom: var(--double-unit);
+}
+
+.hidden {
+  visibility: hidden;
 }
 
 .perMonth {
