chore(18788): replace PaymentPlanButton with two regular buttons

--- a/src/features/subscriptions/components/PaymentPlanCard/PaymentPlanCard.module.css
+++ b/src/features/subscriptions/components/PaymentPlanCard/PaymentPlanCard.module.css
@@ -105,3 +105,17 @@
     color: var(--faint-strong-down);
   }
 }
+
+.paymentPlanButton {
+  background-color: var(--strong-color);
+
+  --subscribe-btn-hover: #269b00;
+
+  &:global(.premium) {
+    --subscribe-btn-hover: var(--accent-strong-up);
+  }
+
+  &:hover {
+    background-color: var(--subscribe-btn-hover);
+  }
+}
