feat(MCDA): 18652 add text controls for sigma range buttons

--- a/src/features/mcda/components/MCDALayerEditor/MCDALayerParameters/MCDALayerParameters.module.css
+++ b/src/features/mcda/components/MCDALayerEditor/MCDALayerParameters/MCDALayerParameters.module.css
@@ -112,11 +112,19 @@
   font-size: 11px;
 }
 
-.resetLimits {
+.rangeTextButtonsContainer {
   width: 100%;
+  margin-top: calc(-1 * var(--half-unit));
+}
+
+.rangeTextButtons {
   margin-top: calc(-1 * var(--half-unit));
   color: var(--accent-strong);
   cursor: pointer;
+
+  &:not(:first-child) {
+    margin-left: var(--unit);
+  }
 }
 
 .textButtonDisabled {
