fix(14428): center fullscreen loader

--- a/src/components/LoadingSpinner/LoadingSpinner.module.css
+++ b/src/components/LoadingSpinner/LoadingSpinner.module.css
@@ -16,3 +16,10 @@
 .animationContainer {
   padding: 1em;
 }
+
+.fullScreenLoader {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
