feat(MCDA): 19176, 19218 Add secondary clamping after transformation. Add range preset buttons in edit mode.  (#814)
* chore: remove min and add lowerBound ahd upperBound properties to AxisTransformation

* feat(MCDA): 18652 add text controls for sigma range buttons

* feat: add simplified transformation statistic fetching

* feat: show temporary debug info by clicking on Transform label

* chore: use double click for showing debug info

* fix: use non-transformed statistics values to set ranges

* fix(MCDA): 19181 Fix Clamp Outliers logic

* feat: better chart scaling

* feat: use non-transformed mean + sigma to calculate predefined ranges

* fix(MCDA): proper clamping operation for MCDA style expression

* feat: clamp transformed values by lower/upper bounds of used transformation

* feat: clamp transformed values by lower/upper bounds of used transformation

* chore: extract generateSigmaRange function

* feat: add transformed values clamping + improved scaling in TransformationsChart

* feat: add datasetStats field to MCDA axis. Use datasetStats to set MCDA range to 3-sigma upon creation

* feat(MCDA): 19176 Add clamping of transformed values by upperBound and lowerBound of used transformation

* chore: replace isNumber() from @turf/helpers with our in-house one

* chore: remove arbitrary default values from to-number to avoid masking errors

* chore: remove arbitrary default values from to-number to avoid masking errors

* Revert "chore: remove arbitrary default values from to-number to avoid masking errors"

This reverts commit 43fe468ceeb71390f106732de40fdb7e29b5381e.

* Replace default values in to-number with Infinity and -Infinity for clamp and min/max operations

* chore: replace Infinity with Number.POSITIVE_INFINITY

* fix: fix changing axis transformation

* fix: do not clamp transformed values if outliers === 'unmodified'

* fix: don't apply secondary clamping to transofrmation: 'no'

* chore: rename

--- a/src/features/mcda/components/MCDALayerEditor/MCDALayerParameters/MCDALayerParameters.module.css
+++ b/src/features/mcda/components/MCDALayerEditor/MCDALayerParameters/MCDALayerParameters.module.css
@@ -50,13 +50,8 @@
   width: 50%;
 }
 
-.textInputBox input,
-.rangeInputBox input {
+.textInputBox input {
   font-size: 11px;
-}
-
-.inputRangeDivider {
-  margin: 0 var(--half-unit);
 }
 
 .hiddenError {
@@ -71,25 +66,6 @@
   color: red;
   font-size: 12px;
   line-height: 16px;
-}
-
-.rangeInputContainer {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  width: 144px;
-}
-
-.rangeInputBox {
-  padding: var(--half-unit);
-  height: 30px;
-  width: 100%;
-}
-
-.rangeInputRoot {
-  flex-grow: 0.5;
-  position: relative;
-  width: 55px;
 }
 
 /* Select input */
@@ -112,27 +88,10 @@
   font-size: 11px;
 }
 
-.resetLimits {
-  width: 100%;
-  margin-top: calc(-1 * var(--half-unit));
-  color: var(--accent-strong);
-  cursor: pointer;
-}
-
-.textButtonDisabled {
-  color: var(--faint-strong);
-}
-
 .editButton {
   margin-inline-end: var(--unit);
   cursor: pointer;
-  color: var(--accent-strong);
-  visibility: hidden;
   align-items: flex-start;
-}
-
-.layer:hover .editButton {
-  visibility: visible;
 }
 
 .editorButtonsContainer {
