--- a/src/features/subscriptions/components/PaymentPlanCard/PaymentPlanCard.module.css
+++ b/src/features/subscriptions/components/PaymentPlanCard/PaymentPlanCard.module.css
@@ -1,5 +1,14 @@
 .planCard {
-  border: 1px solid var(--faint-weak-up, #d2d5d8);
+  /* Color for plan type, button, highlights */
+  --primary-color: var(--success-strong);
+  /* Color for plan type background */
+  --secondary-color: #def5df;
+  /* Background color of card */
+  --plan-bg-color: transparent;
+  /* Border color of card */
+  --plan-border-color: var(--faint-weak-up, #d2d5d8);
+
+  border: 1px solid var(--plan-border-color);
   border-radius: var(--double-unit, 16px);
   padding: 48px 40px 24px;
   height: 578px;
@@ -8,16 +17,18 @@
   display: flex;
   position: relative;
   flex-direction: column;
-
-  --strong-color: var(--success-strong);
-  --plan-type-bg-color: #def5df;
+  background-color: var(--plan-bg-color);
 
   &:global(.premium) {
-    --strong-color: var(--accent-strong);
-    --plan-type-bg-color: #d8effc;
+    --primary-color: var(--accent-strong);
+    --secondary-color: #d8effc;
+    --plan-bg-color: var(--accent-weak);
+    --plan-border-color: var(--accent-weak-up);
+  }
 
-    background-color: var(--accent-weak);
-    border-color: var(--strong-color);
+  &:global(.custom) {
+    --primary-color: var(--base-strong-down);
+    --secondary-color: var(--faint-weak);
   }
 
   &:hover {
@@ -35,8 +46,8 @@
   border-radius: 18px;
   right: 40px;
   top: -18px;
-  background-color: var(--plan-type-bg-color);
-  color: var(--strong-color);
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
   display: flex;
   align-items: center;
 }
@@ -61,6 +72,13 @@
   margin-left: 5px;
 }
 
+.customPlanName {
+  font-weight: 500;
+  line-height: 40px;
+  font-size: 52px;
+  margin: 36px 0 22px;
+}
+
 .planDescription {
   color: var(--faint-strong);
   margin-bottom: var(--double-unit);
@@ -68,6 +86,12 @@
 
 .buttonWrapper {
   margin-bottom: 24px;
+}
+
+.customButtonsWrapper {
+  column-gap: 16px;
+  display: flex;
+  align-items: center;
 }
 
 .cancelButton {
@@ -92,7 +116,7 @@
 
 .highlightIcon {
   margin-right: var(--double-unit);
-  color: var(--strong-color);
+  color: var(--primary-color);
 }
 
 .footerWrapper {
@@ -106,16 +130,45 @@
   }
 }
 
+.bookDemoLink {
+  font: var(--font-xs);
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 0.019px;
+  color: var(--base-strong-down);
+  padding: 11px 12px;
+  border-radius: var(--border-radius);
+  border: 1px solid var(--base-strong-down, #2e3d4a);
+  text-decoration: none;
+  cursor: pointer;
+
+  &:hover {
+    border-color: var(--base-strong);
+    color: var(--base-strong);
+  }
+
+  &:focus-visible {
+    outline: none;
+    box-shadow:
+      0 0 0 2px var(--base-weak),
+      0 0 0 4px var(--complimentary-strong);
+  }
+}
+
 .paymentPlanButton {
-  background-color: var(--strong-color);
+  background-color: var(--primary-color);
 
   --subscribe-btn-hover: #269b00;
+
+  &:hover {
+    background-color: var(--subscribe-btn-hover);
+  }
 
   &:global(.premium) {
     --subscribe-btn-hover: var(--accent-strong-up);
   }
 
-  &:hover {
-    background-color: var(--subscribe-btn-hover);
+  &:global(.custom) {
+    --subscribe-btn-hover: var(--base-strong, red);
   }
 }
