feat(breadcrumbs): 14063 Add static Breadcrumbs panel

--- a/src/views/Map/Layouts/Laptop/Laptop.module.css
+++ b/src/views/Map/Layouts/Laptop/Laptop.module.css
@@ -21,7 +21,8 @@
   flex: 1;
 }
 
-.mapSpaceBottom {
+.mapSpaceBottom,
+.mapSpaceTop {
   display: flex;
   flex-direction: column;
   justify-content: center;
