--- a/src/views/Map/Layouts/Mobile/Mobile.module.css
+++ b/src/views/Map/Layouts/Mobile/Mobile.module.css
@@ -58,6 +58,9 @@
 }
 
 .topColumn {
+  display: flex;
+  flex-direction: column;
+  gap: var(--unit);
   grid-row: 1;
   grid-column: 1/-1;
   padding: var(--unit);
