--- a/src/views/Map/Layouts/Desktop/Desktop.module.css
+++ b/src/views/Map/Layouts/Desktop/Desktop.module.css
@@ -27,7 +27,8 @@
   flex: 1;
 }
 
-.mapSpaceBottom {
+.mapSpaceBottom,
+.mapSpaceTop {
   display: flex;
   flex-direction: column;
   justify-content: center;
