chore: add small gap between MCDA layers in editor

--- a/src/features/mcda/components/MCDALayerEditor/style.module.css
+++ b/src/features/mcda/components/MCDALayerEditor/style.module.css
@@ -1,4 +1,7 @@
 .editor {
+  display: flex;
+  flex-direction: column;
+  gap: var(--unit);
   margin-bottom: var(--unit);
   margin-right: calc(-1 * var(--half-unit));
 }
