feat(MCDA): 19659 Add tooltip button near Reverse Sentiment button

--- a/src/features/mcda/components/MCDALayerEditor/MCDALayerParameters/MCDALayerParameters.module.css
+++ b/src/features/mcda/components/MCDALayerEditor/MCDALayerParameters/MCDALayerParameters.module.css
@@ -116,3 +116,10 @@
 .reverseButton {
   margin: var(--half-unit) 0;
 }
+
+.topControlsContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: var(--half-unit);
+}
