feat(14063): make breadcrumbs width to be the width of its children

--- a/src/features/breadcrumbs/components/Breadcrumbs/Breadcrumbs.module.css
+++ b/src/features/breadcrumbs/components/Breadcrumbs/Breadcrumbs.module.css
@@ -1,8 +1,9 @@
 .breadcrumbs {
   border-radius: var(--half-unit);
-  display: flex;
+  display: inline-flex;
   flex-wrap: wrap;
   padding: var(--half-unit) var(--unit);
   margin: 0;
   overflow: auto;
+  background-color: var(--base-weak);
 }
