--- a/src/views/Map/Map.module.css
+++ b/src/views/Map/Map.module.css
@@ -33,8 +33,8 @@
 }
 
 .crosshair {
-  left: calc(50%);
-  top: calc(50%);
+  left: 50%;
+  top: 50%;
   transform: translate(-50%, -50%);
   position: absolute;
   color: var(--faint-strong-up);
