--- a/src/views/Map/Map.module.css
+++ b/src/views/Map/Map.module.css
@@ -32,6 +32,14 @@
   }
 }
 
+.crosshair {
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  color: var(--faint-strong-up);
+}
+
 .footer {
   height: 100%;
   width: 100%;
