--- a/src/views/Map/Map.module.css
+++ b/src/views/Map/Map.module.css
@@ -38,6 +38,7 @@
   transform: translate(-50%, -50%);
   position: absolute;
   color: var(--faint-strong-up);
+  pointer-events: none;
 }
 
 .footer {
