--- a/src/features/create_layer/components/EditFeaturesPanel/EditFeaturesPanel.module.css
+++ b/src/features/create_layer/components/EditFeaturesPanel/EditFeaturesPanel.module.css
@@ -8,7 +8,9 @@
   max-height: calc(100vh - 140px);
 
   &.show {
-    transition: visibility 0s linear 0s, opacity 0.33s linear 0s,
+    transition:
+      visibility 0s linear 0s,
+      opacity 0.33s linear 0s,
       margin-right 0.1s linear 0s;
     visibility: visible;
     opacity: 1;
@@ -16,7 +18,9 @@
   }
 
   &.hide {
-    transition: visibility 0s linear 0.33s, opacity 0.33s linear 0s,
+    transition:
+      visibility 0s linear 0.33s,
+      opacity 0.33s linear 0s,
       margin-right 0.15s linear 0s;
     visibility: hidden;
     opacity: 0;
