--- a/src/features/subscriptions/components/PaymentPlanCard/PaymentPlanCard.module.css
+++ b/src/features/subscriptions/components/PaymentPlanCard/PaymentPlanCard.module.css
@@ -104,7 +104,7 @@
   font-weight: 500;
   line-height: 40px;
   font-size: 52px;
-  margin: 36px 0 22px;
+  margin: 36px 0 21px;
 }
 
 .planDescription {
@@ -128,14 +128,11 @@
   flex-direction: column;
   align-items: flex-start;
   width: 100%;
+  row-gap: 11px;
 
   /* Paypal buttons specific styles */
   & > div {
     width: 100%;
-  }
-
-  & .trialButton {
-    margin-bottom: 11px;
   }
 }
 
@@ -161,7 +158,7 @@
   line-height: 16px;
   letter-spacing: 0.019px;
   color: var(--primary-color);
-  padding: 11px 12px;
+  padding: 10px 12px;
   border-radius: var(--border-radius);
   border: 1px solid var(--primary-color, #2e3d4a);
   text-decoration: none;
